# AML-Veersa

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml  render.yaml
backend_1/: .dockerignore  .env.example  Dockerfile  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend_1/app/: __init__.py  config.py
backend_1/app/agents/: aml_agent.py  aml_tools.py  rule_parser.py
backend_1/app/database/: connection.py  neo4j_connection.py
backend_1/app/models/: __init__.py  account.py  alert.py  customer.py  rule.py  transaction.py  user.py
backend_1/app/routes/: __init__.py  agent_routes.py  customer_routes.py  data_routes.py  rules_routes.py  user_routes.py
backend_1/app/services/: __init__.py
backend_2/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
backend_2/app/: __init__.py  config.py
backend_2/app/agents/: doc_agent.py  doc_tools.py
backend_2/app/database/: connection.py  prompt_store.py
backend_2/app/routes/: agent_routes.py  document_routes.py  image_routes.py
backend_2/app/services/: ai_detection_service.py  forensic_analysis_service.py  image_storage_service.py  metadata_extraction_service.py  process_document.py  report_generation_service.py  reverse_search_service.py  tampering_detection_service.py  trial.py  validate_document.py
backend_2/app/utils/: logging_config.py
backend_2/output/obj_1/: Swiss_Home_Purchase_Agreement_Scanned_Noise_forparticipants_compressed.md
backend_2/output/obj_2/: Loan Contract_3 to 26(part 2).md  (+1 more)
frontend/: README.md  (+5 more)
(+40 files in other folders)
