[project]
name = "backend-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi>=0.120.4",
    "langchain>=1.0.3",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.2",
    "neo4j>=6.0.2",
    "openai>=2.6.1",
    "polars>=1.35.1",
    "python-multipart>=0.0.20",
    "rich>=14.2.0",
    "uvicorn>=0.38.0",
]
